# database-assistant

./: .gitignore  README.md  pyproject.toml
database_assistant/: __main__.py  cli.py  csv_parsers.py  utils.py
database_assistant/dynamodb/: __init__.py  commands.py  models.py
